fixed store and social media spacing

--- a/public/sass/pages/contact.scss
+++ b/public/sass/pages/contact.scss
@@ -36,6 +36,11 @@
     &--social-row {
       position: relative;
       z-index: 10;
+      &--container {
+        @include responsive(tab-land) {
+          margin-right: 1rem;
+        }
+      }
     }
   }
 
